# roboracing-software

avc/: CMakeLists.txt
avc/launch/: follower.launch  follower_avc.launch  road_detector.launch
iarrc/: CMakeLists.txt
iarrc/launch/: stoplight_watcher.launch
rr_avc/launch/: bigoli.launch  sedani.launch
rr_common/: CMakeLists.txt
rr_common/launch/: follower.launch  image_folder_player.launch
rr_description/urdf/: sedani.urdf
rr_gazebo/worlds/: iarrc_drag.world
rr_iarrc/: CMakeLists.txt
rr_iarrc/launch/: canny_editor.launch  cone_detection.launch  cone_detection_point.launch  hls_matcher.launch  iarrc_line_detection_comparison.launch  lane_keeping_test.launch  laplacian_line_detector.launch  laplacian_line_detector_copy.launch  line_detector_segnet.launch  lines_pcl_converter.launch  lines_pcl_converter_cone.launch  local_mapper.launch  mapper.launch  mpc_planner_sedani.launch  test_segnet_and_planner.launch
rr_iarrc/nodes/: simple_lane_keeper.py
rr_iarrc/saved_hsv/: example.txt
rr_iarrc/src/Canny_Detector/: CMakeLists.txt  canny_editor.cpp  canny_line_detector.cpp  canny_line_detector.launch
rr_platform/: CMakeLists.txt
rr_platform/include/: EthernetSocket.h
rr_platform/launch/: sedani.launch
rr_platform/msg/: color.msg
rr_platform/src/: EthernetSocket.cpp
rr_rviz_plugins/: CMakeLists.txt  plugin_description.xml
rr_rviz_plugins/src/: ColorPanel.cpp  SpeedGraphPanel.cpp
sandbox/: 99-roboracing.rules
sandbox/LineExtraction/: laneDetection.py  laneDetectionROS.py
sandbox/camera/: cameraDynamicReconfigure.py
(+38 files in other folders)
